added europan standard preset4

--- a/layout - prettier - 1.71 wip/index.html
+++ b/layout - prettier - 1.71 wip/index.html
@@ -117,6 +117,9 @@
             <option value="preset3">
               "Buttonshy"63x88mm with bleed, must use landscape pages.
             </option>
+            <option value="preset4">
+              "Europan Standard"63x88mm (Dominion)
+            </option>
           </select>
         </div>
       </div>
