added all tools

--- a/index.html
+++ b/index.html
@@ -34,6 +34,16 @@
           </p>
           <a href="./layout/" class="button">Go to Card Layout Tool</a>
         </div>
+        <div class="tool">
+          <h2>Corner rounding game</h2>
+          <p>A simple game to practice your Kadomaru skills.</p>
+          <a href="./corner/" class="button">Go to Card Layout Tool</a>
+        </div>
+        <div class="tool">
+          <h2>Behold scoring app</h2>
+          <p>Scoring app for the game "Behold:Rome" by Joe Klipfel</p>
+          <a href="./behold/" class="button">Go to Card Layout Tool</a>
+        </div>
       </div>
     </div>
   </body>
