rename index title, added ui readme

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>PNP Buddy Tools</h1>
+      <h1>PNP Tools - WIP</h1>
       <p>
         This repository hosts a collection of web-based tools designed to help
         users with tasks related to Print and Play (PNP) game creation. These
@@ -34,15 +34,6 @@
           </p>
           <a href="./layout/" class="button">Go to Card Layout Tool</a>
         </div>
-        <div class="tool">
-          <h2>Corner rounding game</h2>
-          <p>A simple game to practice your Kadomaru skills.</p>
-          <a href="./corner/" class="button">Go to Card Layout Tool</a>
-        </div>
-        <div class="tool">
-          <h2>Behold scoring app</h2>
-          <p>Scoring app for the game "Behold:Rome" by Joe Klipfel</p>
-          <a href="./behold/" class="button">Go to Card Layout Tool</a>
         </div>
       </div>
     </div>
